<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544/5354046379</string>
    <string name="facebook_id" translatable="false">xxxxx</string>
    <string name="facebook_id_token" translatable="false">xxxxxx</string>

    <string name="monthly_pro" translatable="false">monthly_pro</string>
    <string name="yearly_pro" translatable="false">fire_yearly</string>
    <string name="trial_yearly_pro" translatable="false">trial_yearly_pro</string>
    <string name="terms_url" translatable="false">https://example.com/</string>
    <string name="privacy_url" translatable="false">https://example.com/</string>

    <string name="intro1">xxxxxxxxxxxxxxxxxxx</string>
    <string name="intro2">xxxxxxxxxxxxxxxxxxx</string>
    <string name="intro3">xxxxxxxxxxxxxxxxxxx</string>
    <string name="intro1_content">xxxxxxxxxxxxxxxxxxx</string>
    <string name="intro2_content">xxxxxxxxxxxxxxxxxxx</string>
    <string name="intro3_content">xxxxxxxxxxxxxxxxxxx</string>

    <string name="LOADING">Loading…</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_connection">Please check your connection and try again</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="try_again">Try Again</string>
    <string name="uninstall">Uninstall</string>
    <string name="other">Other</string>
    <string name="failed_open_the_browser">Failed to open the browser.</string>
    <string name="confirm_uninstall_message">Join the fun and explore smart, creative tools — auto effects, quick actions, and instant sharing that make every moment better!</string>
    <string name="confirm_uninstall_title">Over 90% of users love our app for its smart features, fast performance, and easy creative experience.</string>
    <string name="i_do_not_need_it">I no longer need this app</string>
    <string name="did_not_understand">I didn\'t understand how to use it</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="feature_does_not_working">Feature is not working</string>
    <string name="issues_encountered_during_usage">Issues encountered during usage</string>
    <string name="still_uninstall">Still want to uninstall</string>
    <string name="please_specify_reason">Please specify your reason</string>

</resources>