<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_intro"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="tvTitle,tvSubTitle,flNative,btnTry,btnUninstall"
            app:flow_verticalGap="16dp"
            app:layout_constraintTop_toTopOf="@id/guide" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/confirm_uninstall_title"
            android:textColor="@color/color_title_intro"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/confirm_uninstall_message"
            android:textColor="@color/color_title_intro"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/flNative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnTry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_native_install_button"
            android:text="@string/try_again"
            android:textColor="@color/color_native_install_button_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnUninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/still_uninstall"
            android:textColor="@color/color_body_intro"
            android:textSize="14sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
