<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_dialog_no_internet"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:src="@drawable/icon_wifi_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/no_internet"
            android:textColor="@color/dialog_no_internet_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/please_check_your_connection"
            android:textColor="@color/dialog_no_internet_text_color"
            android:textSize="13sp" />


        <LinearLayout
            android:id="@+id/btnRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_native_install_button"
            android:gravity="center"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_marginTop="2dp"
                android:src="@drawable/icon_retry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>